--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <ul class="accordion">
       <li>
-        <input type="radio" name="accordion" id="2" />
-        <label for="2">What is Css ?</label>
+        <input type="radio" name="accordion" id="1" />
+        <label for="1">What is Html ?</label>
         <div class="content">
           <div>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum
@@ -20,8 +20,8 @@
         </div>
       </li>
       <li>
-        <input type="radio" name="accordion" id="3" />
-        <label for="3">What is Javascript ?</label>
+        <input type="radio" name="accordion" id="2" />
+        <label for="2">What is Css ?</label>
         <div class="content">
           <div>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum
@@ -33,8 +33,8 @@
         </div>
       </li>
       <li>
-        <input type="radio" name="accordion" id="1" />
-        <label for="1">What is Html ?</label>
+        <input type="radio" name="accordion" id="3" />
+        <label for="3">What is Javacsript ?</label>
         <div class="content">
           <div>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum
